# aura-old

./: .gitignore  Makefile.am  aura.conf.example  azra.conf.example  config.lua  configure.ac  test.sh
include/aura/: asyncio.h  aura.h  chunk.h  debug.h  urpc.h
include/azra/: azra.h  urpc.h
lua/: cotask.lua  init.lua
lua/lib/: dumper.lua  help.lua  stress.lua  test.lua  testc.lua  urpc.lua
src/: Makefile.am  azra.c  hooks.c  luatest.c  main_loop.c  netcmdio.c  network.c  uart.c  urpc.c
src/include/: azra.h
src/ioserver/: Makefile.am  asyncio.c  azra.c  chunk.c  hooks.c  lua_perflimits.c  main.c  main_loop.c  network.c  plugin.c  uart.c
src/plugins/: Makefile.am
src/plugins/dummy/: Makefile.am  dummy.c
src/plugins/tcp/: Makefile.am  tcp.c
src/plugins/urpc/: Makefile.am  datahelpers.c  urpc.c
src/plugins/urpc-null/: Makefile.am  urpcnull.c
src/plugins/urpc-serial/: Makefile.am  serial.c  uart.c  uart.h
src/server/: Makefile.am  azra  azra.c  broadcast.c  hooks.c  lua_perflimits.c  main_loop.c  netcmdio.c  network.c  uart.c  urpc.c
tests/: nullt.lua  serial.lua
